k8s/appointment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment
  template:
    metadata:
      labels:
        app: appointment
    spec:
      containers:
        - name: appointment
          image: smart/appointment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment
  ports:
    - port: 4004
      targetPort: 4004
