k8s/doctor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor
  template:
    metadata:
      labels:
        app: doctor
    spec:
      containers:
        - name: doctor
          image: smart/doctor-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  selector:
    app: doctor
  ports:
    - port: 4003
      targetPort: 4003
