k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: smart/notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4006
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
    - port: 4006
      targetPort: 4006
