k8s/patient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
    spec:
      containers:
        - name: patient
          image: smart/patient-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient
  ports:
    - port: 4002
      targetPort: 4002
