k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-ingress
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4001
          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 4002
          - path: /doctors
            pathType: Prefix
            backend:
              service:
                name: doctor-service
                port:
                  number: 4003
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 4004
          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 4007
          - path: /notify
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 4006
          - path: /telemedicine
            pathType: Prefix
            backend:
              service:
                name: telemedicine-service
                port:
                  number: 4005
